src/main/resources/matomo/deployments-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shynet-application
  namespace: default
  labels:
    app: shynet-application
spec:
  selector:
    matchLabels:
      app: shynet-application
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: shynet-application
    spec:
      containers:
      - name: shynet-application
        image: milesmcc/shynet:edge
        imagePullPolicy: IfNotPresent
        command: ["./celeryworker.sh"]
