src/main/resources/matomo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: shynet-redis
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: shynet-redis
---
apiVersion: v1
kind: Service
metadata:
  name: shynet-webserver-service  
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: shynet-webserver
