src/main/resources/matomo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shynet-webserver-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - fqdn
    secretName: jira-secret
  rules:
  - host: fqdn
    http:
      paths:
      - backend:
          serviceName: shynet-webserver-service
          servicePort: 8080
        path: /
